# grokfun

./: .gitignore  Anchor.toml  BONDING-CURVE-FIX-EXPLAINED.md  BONDING-CURVE-FIX.md  BONDING_CURVE_ANALYSIS.md  COMPLETE-BONDING-CURVE-FIX.md  COMPREHENSIVE-BONDING-CURVE-SOLUTION.md  Cargo.toml  DISCRIMINATOR-FIX-SOLUTION.md  ERROR_101_ANALYSIS.md  FINAL-SOLUTION-SUMMARY.md  FIXED-SOLUTION-README.md  OPTIMIZATION-SUMMARY.md  README.md  SOLUTION-DOCUMENTATION.md  better-initialization-fix.js  complete-bonding-curve-fix.js  complete-final-solution.js  config.js  create-vault-first.js  final-discriminator-check.js  final-fixed-solution.js  final-solution-illegal-owner-fix.js  final-solution.js  find-correct-discriminator.js  fix-discriminator.js  fix-vault-ownership.js  fixed-discriminator-solution.js  fixed-initialize-launch.js  fixed-owner-initialize.js  fixed-ownership-discriminator-solution.js  initialize-bonding-curve.js  owner-fixed-solution.js  package-lock.json  package.json  rent-exempt-discriminator-fix.js  scriptss  simple-discriminator-fix.js  test-fixed-with-correct-discriminator.js  tsconfig.json  (+2 more)
grokpad/programs/grokpad/: Cargo.toml
grokpad/programs/grokpad/src/: errors.rs  lib.rs  state.rs
programs/grokpad/: Anchor.toml  Cargo.toml  Cargo.toml.save
programs/grokpad/src/: lib.rs
programs/grokpad/src/_backup/: graduate.rs
programs/grokpad/src/instructions/: admin.rs  initialize_launch.rs  mod.rs
programs/grokpad/test-ledger/: genesis.tar.bz2  snapshot-100-WYLzsSwVwowitbd4vFZsviFj4kJvKWdPtJKMA7CLsxp.tar.zst
programs/grokpad/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1754709338213353  MANIFEST-000021
(+50 files in other folders)
