[package]
name = "grokpad"
version = "0.1.0"
description = "Solana token launchpad with bonding curve and vanity mints"
edition = "2021"

[lib]
name = "grokpad"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.30.1", features = ["token", "associated_token"] }

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
